Fix Pinball styling, fix game start modal being too short, add flipper audio, fix lives bar from removing the life li

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -22,9 +22,10 @@ body{
   .screen-modal{
     position: absolute;
     margin: auto;
-    height: 100%;
+    height: 110%;
     width: 100%;
     background-color: rgb(30, 0, 58);
+    display:block;
     
     .screen{
       position: relative;
@@ -77,8 +78,11 @@ body{
       list-style-type: none;
     }
   }
+  .life{
+    opacity:1;
+  }
   .lost-life{
-    visibility: hidden;
+    opacity: 0;
   }
 
 }
